--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+    <title>Happi</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-  <title>Paper grid</title>
+    <style>
+      * {
+        margin:0;
+        padding:0;
+      }
+    </style>
 
+  </head>
+  <body>
+    <happi-app></happi-app>
 
-  <style>
-    * {
-      margin:0;
-      padding:0;
-    }
-
-  </style>
-
-</head>
-
-<body>
-  <happi-app style="display: block; height: 100vh;width: 100%;"></happi-app>
-
-  <script type="module" src="happi-app.js"></script>
-</body>
-
+    <script type="module" src="happi.js"></script>
+  </body>
 </html>
